[tool.poetry]
name = "llm-tokenizers"
version = "0.1.0"
description = ""
authors = ["datnnt97"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.111.0"}
jinja2 = "^3.1.4"
tiktoken = "^0.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
